<resources>
    <string name="app_name">GoCulture</string>
    <string name="title_map">Map</string>
    <string name="title_rating">Rating</string>
    <string name="title_friends">Friends</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_empty">Username is required</string>
    <string name="email_empty">Email is required</string>
    <string name="password_empty">Password is required</string>
    <string name="email_invalid">Provide a valid email address</string>
    <string name="password_too_short">Passwords must be at least 6 characters</string>
    <string name="welcome_message">Welcome,</string>
    <string name="error_message">An error occurred. Please try again</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="sign_out">Sign out</string>
    <string name="change_username">Change username</string>
    <string name="change_email">Change email</string>
    <string name="confirm_email">Confirm email</string>
    <string name="change_password">Change password</string>
    <string name="user_score">Score: %s</string>
    <string name="about_app_title">About</string>
    <string name="about_app_description">
        <![CDATA[
            <p>Everyone should be a part of social and cultural life, because personal and spiritual development is simply impossible without it.</p>
            <p>Our goal is to attract a young audience to museums, theaters and other places of urban culture.</p>
            <p>The GoCulture app is designed to help show your friends how close you are to culture.</p>
            <h3>Developers:</h3>
            <p style="padding-left: 40px;">Alelsey Denisov<br />Konstantin Doronin<br />(Samsung IT Academy)</p>
            <h3>Modules used in the application:</h3>
            <p style="padding-left: 40px;"><a href="https://github.com/osmdroid/osmdroid">OpenStreetMap - Tools for Android</a><br /><a href="https://firebase.google.com/">Google Firebase</a><br /><a href="https://github.com/google/gson">Gson</a><br /><a href="https://github.com/square/retrofit">Retrofit</a><br /><a href="https://github.com/coil-kt/coil">Coil</a><br /><a href="https://github.com/GetStream/avatarview-android">GetStream AvatarView</a><br /><a href="https://github.com/CanHub/Android-Image-Cropper">Android Image Cropper</a></p>
        ]]>
    </string>
    <string name="gps_off">Please turn on the GPS.\nWhile geolocation is turned off, you will not be awarded scores.</string>
    <string name="location_permission_denied_dialog_title">Location Access</string>
    <string name="location_permission_denied_dialog_text">Allow the GoСulture app to access device location data?</string>
    <string name="username_too_long">The username must not be longer than 23 characters</string>
    <string name="no_internet">There is no Internet connection. The application cannot work correctly</string>
    <string name="email_already_confirmed">The mail has already been confirmed</string>
    <string name="password_changed">Password changed</string>
    <string name="old_password_incorrect">Your old password was entered incorrectly</string>
    <string name="avatar_updated">Profile photo updated</string>
    <string name="confirmation_email_sent">Confirmation email has been sent</string>
    <string name="email_updated">Email has been successfully updated</string>
    <string name="username_updated">Username successfully updated</string>
    <string name="password_incorrect">The password is incorrect</string>
    <string name="title_password_reset">Password reset</string>
    <string name="email_password_reset">An email has been sent to your email to reset your password</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="title_registration">New user registration</string>
</resources>
