<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment"
    android:layout_marginBottom="?attr/actionBarSize" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/white"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        app:actionViewClass="android.support.v7.widget.ListPopupWindow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="@string/title_profile" />

    <io.getstream.avatarview.AvatarView
        android:id="@+id/avatar_view"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="32dp"
        app:avatarViewBorderColor="@color/dodger_blue"
        app:avatarViewBorderWidth="3dp"
        app:avatarViewIndicatorBorderColor="@color/white"
        app:avatarViewIndicatorBorderSizeCriteria="10"
        app:avatarViewIndicatorColor="@color/md_green_100"
        app:avatarViewIndicatorEnabled="true"
        app:avatarViewIndicatorPosition="bottomRight"
        app:avatarViewIndicatorSizeCriteria="9"
        app:avatarViewInitialsTextStyle="bold"
        app:avatarViewShape="circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_toolbar" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/username"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar_view" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Score"
        android:textSize="20sp"
        android:textColor="@color/gray_900"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/options_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingVertical="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>